--- a/pages/blog.html
+++ b/pages/blog.html
@@ -108,7 +108,7 @@
                     <h3><i class="fas fa-heart"></i> 40</h3>
                 </div>
                 <div class="content-blog">
-                    <h3>Introducing the Cloud Shuffle Storage Plugin for Apache Spark Amazon</h3>
+                    <h3>Introducing the Cloud Shuffle Storage Plugin for Apache Spark Amazongit </h3>
                     <p>Calculation at the right granularity always needs to be handled carefully when performing data analytics.</p>
                     <a href="#" class="btn-principal">read more</a>
                 </div>
