--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="desription" content="lean tools on site for logistics and prodution areas"> <!--Consigna SEO-->
     <meta name="keywords" content="5whys, LEAN, GEMBA, SFM, LEADERSHIP, KAIZEN, CONTINUOS IMPROVEMENT"> <!--Consigna SEO-->
     <title>GestionĒ+ | Digital Shopfloor Management</title>
-    <link rel="icon" href="/Img/Icon Logo.png"> <!-- icono reducido en pesataña-->
+    <link rel="icon" href="./Img/Icon Logo.png"> <!-- icono reducido en pesataña-->
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/8a815a169a.js" crossorigin="anonymous"></script>
 </head>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="flex-item2">
-            <img src="img/caratula2.png" alt="caratula" width="500" height="400">
+            <img src="./Img/caratula2.png" alt="caratula" width="500" height="400">
         </div>
     </section>
 
