--- a/pages/Solutions.html
+++ b/pages/Solutions.html
@@ -57,15 +57,15 @@
 
         <aside class="sidebar">
             <div>
-                <img src="/Img/Digital SFM 1.png" alt="" >
+                <img src="../Img/blog 5.png" alt="" >
                 <p>Shop Floor Management 4.0</p>
             </article>
             <div>
-                <img src="/Img/Digital SFM 6.png" alt="" >
+                <img src="../Img/Digital SFM 6.png" alt="" >
                 <p>Superior functionality to view order information and report on your production</p>
             </article>
             <div>
-                <img src="/Img/Digital SFM 8.png" alt="" >
+                <img src="../Img/Digital SFM 8.png" alt="" >
                 <p>Remove the documentation burden with shop floor data collection software.</p>
             </article>
         </aside>
