cambio de imágenes ya que no se veían

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="flex-item2">
-            <img src="./Img/caratula2.png" alt="caratula" width="500" height="400">
+            <img src="./Img/OPEN.png" alt="caratula" width="500" height="400">
         </div>
     </section>
 
