--- a/pages/blog.html
+++ b/pages/blog.html
@@ -48,7 +48,7 @@
             <div class="servicios">
 
                 <div class="image-blog">
-                    <img src="../Img/blog 2.png" alt="">
+                    <img src="../Img/side bar .png" alt="">
                     <h3><i class="fas fa-heart"></i> 77</h3>
                 </div>
                 <div class="content-blog">
@@ -62,7 +62,7 @@
             <div class="servicios">
 
                 <div class="image-blog">
-                    <img src="../Img/blog3.png" alt="">
+                    <img src="../Img/sidebar1.png" alt="">
                     <h3><i class="fas fa-heart"></i> 52</h3>
                 </div>
                 <div class="content-blog">
@@ -76,7 +76,7 @@
             <div class="servicios">
 
                 <div class="image-blog">
-                    <img src="../Img/blog 4.png" alt="">
+                    <img src="../Img/side bar 2.png" alt="">
                     <h3><i class="fas fa-heart"></i> 80</h3>
                 </div>
                 <div class="content-blog">
