--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -62,11 +62,11 @@
             </form>
         </div>
         <section class="contact-info">
-            <h4>More Info</h4>
+            <h1>More Info</h4>
             <ul>
-                <li><i class="fas fa-map-marker-alt"></i> 11 Oriente N° 2224, Col. Azcarate, Puebla, Pue, C.P. 72501</li>
-                <li><i class="fas fa-phone"></i> (+52) 222 919 36 30</li>
-                <li><i class="fas fa-envelope-open-text"></i> contact@gestioneplus.com</li>
+                <p><p class="fas fa-map-marker-alt"></p> 11 Oriente N° 2224, Col. Azcarate, Puebla, Pue, C.P. 72501</p>
+                <p><p class="fas fa-phone"></p> (+52) 222 919 36 30</p>
+                <p><p class="fas fa-envelope-open-text"></p> contact@gestioneplus.com</p>
             </ul> 
             <H4>gestioneplus.net</H4>
             
