--- a/pages/Solutions.html
+++ b/pages/Solutions.html
@@ -5,7 +5,7 @@
     <meta name="desription" content="examples of on-site leadership applications with shopfloor management and LEAN tools."> <!--Consigna SEO-->
     <meta name="keywords" content="5whys, LEAN, GEMBA, SFM, LEADERSHIP, KAIZEN, CONTINUOS IMPROVEMENT"> <!--Consigna SEO-->
     <title>GestionĒ+ | Solutions</title>
-    <link rel="icon" href="../Img/Icon Logo.png"> <!-- icono reducido en pesataña-->
+    <link rel="icon" href="../Img/Icon Logo.png "> <!-- icono reducido en pesataña-->
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/8a815a169a.js" crossorigin="anonymous"></script>
 </head>
@@ -70,21 +70,21 @@
             </article>
         </aside>
 
-        <div class="related-post">
+        <p class="related-post">
             Automotive
-        </div>
-        <div class="related-post">
+        </p>
+        <p class="related-post">
            Mechanical Engginering
-        </div>
-        <div class="related-post">
+        </p>
+        <p class="related-post">
             Aviation
-        </div>
-        <div class="related-post">
+        </p>
+        <p class="related-post">
            Logistics
-        </div>
-        <div class="related-post">
+        </p>
+        <p class="related-post">
            Electronics 
-        </div>
+        </p>
 
     </div>
 
